--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,7 +18,7 @@
     </div>
     <script src="scripts/bootstrap.bundle.min.js" defer></script>
     <script src="scripts/chart.js" type="module" defer></script>
-    <script src="scripts/chart.umd.js" defer></script>
+    <!-- <script src="scripts/chart.umd.js" defer></script> -->
 </body>
 
 </html> 
