--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     
     <link rel="stylesheet" href="css/index.css" id="index-stylesheet">
+    <link rel="stylesheet" href="css/login.css">
     <link rel="stylesheet" href="css/common-adaptive.css">
     
     <title id="page-title">Главная страница</title>
@@ -18,6 +19,7 @@
     </div>
     <script src="scripts/bootstrap.bundle.min.js" defer></script>
     <script src="scripts/chart.js" type="module" defer></script>
+    <script src="scripts/color.esm.js" type="module" defer></script>
     <!-- <script src="scripts/chart.umd.js" defer></script> -->
 </body>
 
