--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,8 +18,9 @@
 
     </div>
     <script src="scripts/bootstrap.bundle.min.js" defer></script>
-    <script src="scripts/chart.js" type="module" defer></script>
-    <script src="scripts/color.esm.js" type="module" defer></script>
+    <script src="scripts/chart.js" defer></script>
+    <script src="scripts/chart.umd.js" defer></script>
+    <!-- <script src="scripts/color.esm.js" defer></script> -->
     <!-- <script src="scripts/chart.umd.js" defer></script> -->
 </body>
 
